# Extract

./: README.md  basic.py  extract.py  pyproject.toml
src/extract/: ext.py  extract.py  req.py
tests/: test_date_string.py  test_ext.py
