[project]
name = "Extract"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "rlaehgus97", email = "starkim625@gmail.com"},
]
dependencies = [
    "requests>=2.32.3",
    "pyarrow>=17.0.0",
    "pandas>=2.2.2",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]
